Fixed prettyprint spacing on small screens
This is what it fixes: http://d.pr/i/Iv7d

--- a/public/scss/modules/_bin.scss
+++ b/public/scss/modules/_bin.scss
@@ -14,7 +14,8 @@ body.bin {
 
     .prettyprint {
         border: 0;
-        margin-bottom: 0;
+        margin: 0;
+        padding: 0;
         padding-bottom: 300px;
 
         .linenums {
